# Nora

./: Dockerfile  README.md  docker-compose.yml
.github/workflows/: tests.yml
scripts/: run_benchmark.sh
src/: CMakeLists.txt  global.hpp  main.cpp
src/api/: uci.hpp
src/benchmark/: move_gen.cc
src/test/: test.cc
